# vpp-api

./: CONTRIBUTING.md  Cargo.toml  README.md
api-json/core/: l2.api.json
api-json/plugins/: sfw.api.json
examples/: address_probe.rs  connect_test.rs  dhcp_punt_probe.rs  punt_probe.rs
src/: client.rs  codec.rs  error.rs  event.rs  lib.rs  message.rs  supervisor.rs
